--- a/i18n/de.po
+++ b/i18n/de.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenERP Server 6.0.2\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
-"POT-Creation-Date: 2011-05-09 10:24+0000\n"
-"PO-Revision-Date: 2011-05-09 10:24+0000\n"
+"POT-Creation-Date: 2011-05-12 09:38+0000\n"
+"PO-Revision-Date: 2011-05-12 09:38+0000\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -15,10 +15,92 @@ msgstr ""
 "Content-Transfer-Encoding: \n"
 "Plural-Forms: \n"
 
-#: field:stock.move,prtnotes:0
+#: report:sale.shipping.notes:0
 #. module: stock_move_notes
-msgid "Printed Notes"
-msgstr "Anmerkungen (Druck)"
+msgid "Order Ref."
+msgstr "Referenz Auslieferung"
+
+#: report:stock.picking.list.notes:0
+#. module: stock_move_notes
+msgid "Shipping Address :"
+msgstr "Lieferadresse :"
+
+#: constraint:stock.move:0
+#. module: stock_move_notes
+msgid "You must assign a production lot for this product"
+msgstr "Sie müssen zwingend eine Losnummer für dieses Produkt angeben"
+
+#: view:stock.picking:0
+#. module: stock_move_notes
+msgid "Delivery Order"
+msgstr "Lieferauftrag"
+
+#: report:stock.picking.list.notes:0
+#. module: stock_move_notes
+msgid "State"
+msgstr "Status"
+
+#: report:stock.picking.list.notes:0
+#. module: stock_move_notes
+msgid "Location"
+msgstr "Ort"
+
+#: report:sale.shipping.notes:0
+#: report:stock.picking.list.notes:0
+#. module: stock_move_notes
+msgid "Lot"
+msgstr "Fertigungslos"
+
+#: report:sale.shipping.notes:0
+#: report:stock.picking.list.notes:0
+#. module: stock_move_notes
+msgid "Description"
+msgstr "Beschreibung"
+
+#: report:stock.picking.list.notes:0
+#. module: stock_move_notes
+msgid "Picking List:"
+msgstr "Packauftrag:"
+
+#: report:stock.picking.list.notes:0
+#. module: stock_move_notes
+msgid "Contact Address :"
+msgstr "Kontakt Adresse"
+
+#: constraint:stock.move:0
+#. module: stock_move_notes
+msgid "You try to assign a lot which is not from the same product"
+msgstr "Sie versuchen eine Losnummer ohne Bezug zu diesem Produkt zuzuweisen."
+
+#: report:stock.picking.list.notes:0
+#. module: stock_move_notes
+msgid "Journal"
+msgstr "Journal"
+
+#: model:ir.actions.report.xml,name:stock_move_notes.report_shipping
+#. module: stock_move_notes
+msgid "Delivery order"
+msgstr "Lieferauftrag"
+
+#: report:stock.picking.list.notes:0
+#. module: stock_move_notes
+msgid "Expected Shipping Date"
+msgstr "Erwartete Auslieferung"
+
+#: report:stock.picking.list.notes:0
+#. module: stock_move_notes
+msgid "Delivery Order:"
+msgstr "Lieferauftrag:"
+
+#: report:sale.shipping.notes:0
+#. module: stock_move_notes
+msgid "Shipping Date"
+msgstr "Lieferdatum"
+
+#: report:stock.picking.list.notes:0
+#. module: stock_move_notes
+msgid "Recipient"
+msgstr "Empfänger"
 
 #: view:stock.move:0
 #: field:stock.move,notes:0
@@ -26,3 +108,76 @@ msgstr "Anmerkungen (Druck)"
 #. module: stock_move_notes
 msgid "Notes"
 msgstr "Anmerkungen"
+
+#: report:sale.shipping.notes:0
+#. module: stock_move_notes
+msgid "Delivery Order :"
+msgstr "Lieferauftrag :"
+
+#: report:sale.shipping.notes:0
+#. module: stock_move_notes
+msgid "Order Date"
+msgstr "Auftragsdatum"
+
+#: model:ir.actions.report.xml,name:stock_move_notes.report_picking_list
+#. module: stock_move_notes
+msgid "Packing list"
+msgstr "Packliste"
+
+#: field:stock.move,prtnotes:0
+#. module: stock_move_notes
+msgid "Printed Notes"
+msgstr "Anmerkungen (Druck)"
+
+#: report:sale.shipping.notes:0
+#. module: stock_move_notes
+msgid "Carrier"
+msgstr "Frachtführer"
+
+#: report:stock.picking.list.notes:0
+#. module: stock_move_notes
+msgid "["
+msgstr "["
+
+#: report:stock.picking.list.notes:0
+#. module: stock_move_notes
+msgid "]"
+msgstr "]"
+
+#: report:sale.shipping.notes:0
+#: report:stock.picking.list.notes:0
+#. module: stock_move_notes
+msgid "Quantity"
+msgstr "Menge"
+
+#: report:sale.shipping.notes:0
+#: report:stock.picking.list.notes:0
+#. module: stock_move_notes
+msgid "Weight"
+msgstr "Gewicht"
+
+#: model:ir.model,name:stock_move_notes.model_stock_move
+#. module: stock_move_notes
+msgid "Stock Move"
+msgstr "Lieferung"
+
+#: report:stock.picking.list.notes:0
+#. module: stock_move_notes
+msgid "Reception:"
+msgstr "Zugang:"
+
+#: report:stock.picking.list.notes:0
+#. module: stock_move_notes
+msgid "Order(Origin)"
+msgstr "Auftragsgrundlage"
+
+#: report:stock.picking.list.notes:0
+#. module: stock_move_notes
+msgid "Total"
+msgstr "Summe"
+
+#: report:sale.shipping.notes:0
+#. module: stock_move_notes
+msgid "Invoiced to"
+msgstr "Berechnet an"
+
