--- a/account_invoice_date_of_supply/i18n/de.po
+++ b/account_invoice_date_of_supply/i18n/de.po
@@ -7,26 +7,30 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 6.0.2\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-06-22 13:47+0000\n"
-"PO-Revision-Date: 2011-06-22 13:47+0000\n"
-"Last-Translator: <>\n"
+"PO-Revision-Date: 2011-08-16 15:01+0000\n"
+"Last-Translator: Bremskerl <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Launchpad-Export-Date: 2012-02-29 05:19+0000\n"
+"X-Generator: Launchpad (build 14874)\n"
 
-#: field:account.invoice.line,dateofsupply:0
 #. module: account_invoice_date_of_supply
+#: field:account.invoice.line,dateofsupply:0
 msgid "Date of Supply"
 msgstr "Leistungsdatum"
 
+#. module: account_invoice_date_of_supply
 #: help:account.invoice.line,dateofsupply:0
-#. module: account_invoice_date_of_supply
-msgid "Date of Supply or Service Rendered as required by some tax laws if not the same as the invoice date."
-msgstr "Datum der Leistungserbringung, wie von manchen Ländern gefordert, falls abweichend vom Rechnungsdatum"
+msgid ""
+"Date of Supply or Service Rendered as required by some tax laws if not the "
+"same as the invoice date."
+msgstr ""
+"Datum der Leistungserbringung, wie von manchen Ländern gefordert, falls "
+"abweichend vom Rechnungsdatum"
 
-#: model:ir.model,name:account_invoice_date_of_supply.model_account_invoice_line
 #. module: account_invoice_date_of_supply
+#: model:ir.model,name:account_invoice_date_of_supply.model_account_invoice_line
 msgid "Invoice Line"
 msgstr "Rechungsposition"
-
