--- a/base_partner_notes/i18n/de.po
+++ b/base_partner_notes/i18n/de.po
@@ -7,45 +7,45 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 6.0.2\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-04-27 07:23+0000\n"
-"PO-Revision-Date: 2011-04-27 07:23+0000\n"
-"Last-Translator: <>\n"
+"PO-Revision-Date: 2011-08-16 15:06+0000\n"
+"Last-Translator: Bremskerl <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Launchpad-Export-Date: 2012-02-29 05:19+0000\n"
+"X-Generator: Launchpad (build 14874)\n"
 
+#. module: base_partner_notes
 #: view:res.partner:0
 #: field:res.partner,note_delivery:0
-#. module: base_partner_notes
 msgid "Note for Delivery Orders"
 msgstr "Anmerkungen für Lieferaufträge"
 
+#. module: base_partner_notes
 #: view:res.partner:0
 #: field:res.partner,note_sale:0
-#. module: base_partner_notes
 msgid "Note for Sale Orders"
 msgstr "Anmerkungen für Verkäufe"
 
+#. module: base_partner_notes
 #: view:res.partner:0
 #: field:res.partner,note_invoice:0
-#. module: base_partner_notes
 msgid "Note for Invoices"
 msgstr "Anmerkungen für Rechnungen"
 
-#: model:ir.model,name:base_partner_notes.model_res_partner
 #. module: base_partner_notes
+#: model:ir.model,name:base_partner_notes.model_res_partner
 msgid "Partner"
 msgstr "Partner"
 
+#. module: base_partner_notes
 #: view:res.partner:0
 #: field:res.partner,note_purchase:0
-#. module: base_partner_notes
 msgid "Note for Purchase Orders"
 msgstr "Anmerkungen für Einkäufe"
 
-#: view:res.partner:0
 #. module: base_partner_notes
+#: view:res.partner:0
 msgid "General Notes"
 msgstr "Allgemeine Notizen"
-
