--- a/boilerplates/i18n/de.po
+++ b/boilerplates/i18n/de.po
@@ -7,302 +7,322 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 6.0.2\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-05-24 14:49+0000\n"
-"PO-Revision-Date: 2011-05-24 14:49+0000\n"
-"Last-Translator: <>\n"
+"PO-Revision-Date: 2011-08-16 15:09+0000\n"
+"Last-Translator: Bremskerl <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Launchpad-Export-Date: 2012-02-29 05:19+0000\n"
+"X-Generator: Launchpad (build 14874)\n"
 
+#. module: boilerplates
 #: view:boilerplates.text:0
 #: field:boilerplates.text,category_id:0
-#. module: boilerplates
 msgid "Category"
 msgstr "Kategorie"
 
-#: model:boilerplates.text,name:boilerplates.bp_txt_acct1
 #. module: boilerplates
+#: model:boilerplates.text,name:boilerplates.bp_txt_acct1
 msgid "Rates 12 @ 2%"
 msgstr "Raten 12 @ 2%"
 
-#: help:boilerplates.text,product_id:0
 #. module: boilerplates
+#: help:boilerplates.text,product_id:0
 msgid "This boilerplate relates to this single specific product."
 msgstr "Dieser Textbaustein bezieht sich auf dieses spezielle Produkt."
 
+#. module: boilerplates
 #: code:addons\boilerplates\wizard\boilerplates_wizard.py:67
 #: code:addons\boilerplates\wizard\boilerplates_wizard.py:69
-#. module: boilerplates
 #, python-format
 msgid "Product set on the Boilerplate does not match this "
-msgstr "Entspricht nicht der Produktfestlegung des Textbausteins"
+msgstr "Entspricht nicht der Produktfestlegung des Textbausteins "
 
+#. module: boilerplates
 #: code:addons\boilerplates\wizard\boilerplates_wizard.py:76
 #: code:addons\boilerplates\wizard\boilerplates_wizard.py:79
-#. module: boilerplates
 #, python-format
 msgid "Partner mismatch"
 msgstr "Abweichung beim Partner"
 
+#. module: boilerplates
 #: code:addons\boilerplates\wizard\boilerplates_wizard.py:76
 #: code:addons\boilerplates\wizard\boilerplates_wizard.py:79
-#. module: boilerplates
 #, python-format
 msgid "Partner set on the Boilerplate does not match this "
-msgstr "Entspricht nicht der Partnerfestlegung des Textbausteins"
+msgstr "Entspricht nicht der Partnerfestlegung des Textbausteins "
 
-#: field:boilerplates.text,active:0
 #. module: boilerplates
+#: field:boilerplates.text,active:0
 msgid "Valid"
 msgstr "Gültig"
 
+#. module: boilerplates
 #: code:addons\boilerplates\boilerplates.py:16
 #: sql_constraint:boilerplates.category:0
-#. module: boilerplates
 #, python-format
 msgid "The boilerplate category names must be unique!"
 msgstr "Der Name der Kategorie muss eindeutig sein!"
 
-#: model:ir.model,name:boilerplates.model_boilerplates_text
 #. module: boilerplates
+#: model:ir.model,name:boilerplates.model_boilerplates_text
 msgid "boilerplates.text"
 msgstr "boilerplates.text"
 
-#: view:boilerplates.text:0
 #. module: boilerplates
+#: view:boilerplates.text:0
 msgid "Boilerplate Text"
 msgstr "Textbaustein"
 
-#: model:boilerplates.text,name:boilerplates.bp_txt_acct2
 #. module: boilerplates
+#: model:boilerplates.text,name:boilerplates.bp_txt_acct2
 msgid "No cheques"
 msgstr "Keine Schecks"
 
-#: model:ir.model,name:boilerplates.model_boilerplates_category
 #. module: boilerplates
+#: model:ir.model,name:boilerplates.model_boilerplates_category
 msgid "boilerplates.category"
 msgstr "boilerplates.category"
 
-#: view:boilerplates.category:0
 #. module: boilerplates
+#: view:boilerplates.category:0
 msgid "Boilerplate Category"
 msgstr "Textbaustein-Kategorie"
 
-#: field:boilerplates.text,note:0
 #. module: boilerplates
+#: field:boilerplates.text,note:0
 msgid "Internal notes about this boilerplate"
 msgstr "Interne Anmerkungen zum Textbaustein"
 
+#. module: boilerplates
 #: view:boilerplates.text:0
 #: field:boilerplates.text,product_id:0
-#. module: boilerplates
 msgid "Product"
 msgstr "Produkt"
 
-#: field:boilerplates.category,description:0
 #. module: boilerplates
+#: field:boilerplates.category,description:0
 msgid "Description"
 msgstr "Beschreibung"
 
-#: field:boilerplate.wizard,boilerplate_id:0
 #. module: boilerplates
+#: field:boilerplate.wizard,boilerplate_id:0
 msgid "Boilerplate"
 msgstr "Textbaustein"
 
-#: field:boilerplates.text,valid_to:0
 #. module: boilerplates
+#: field:boilerplates.text,valid_to:0
 msgid "Valid To"
 msgstr "Gültig bis"
 
-#: view:boilerplates.text:0
 #. module: boilerplates
+#: view:boilerplates.text:0
 msgid "Constraints..."
 msgstr "Einschränkungen..."
 
-#: view:boilerplates.text:0
 #. module: boilerplates
+#: view:boilerplates.text:0
 msgid "Content..."
 msgstr "Inhalt..."
 
-#: view:boilerplates.text:0
 #. module: boilerplates
+#: view:boilerplates.text:0
 msgid "Internal Notes"
 msgstr "Interne Anmerkungen"
 
-#: help:boilerplates.text,partner_id:0
 #. module: boilerplates
+#: help:boilerplates.text,partner_id:0
 msgid "This boilerplate relates to this single specific partner."
 msgstr "Dieser Textbaustein bezieht sich auf diesen speziellen Partner."
 
+#. module: boilerplates
 #: model:boilerplates.text,text:boilerplates.bp_txt_acct2
-#. module: boilerplates
-msgid "Please note: Due to recent events, we can not accept cheques from outside the EU."
-msgstr "Bitte beachten: Aufgrund aktuelle Ereignisse nehmen wir keine Schecks von außerhalb der EU an."
+msgid ""
+"Please note: Due to recent events, we can not accept cheques from outside "
+"the EU."
+msgstr ""
+"Bitte beachten: Aufgrund aktuelle Ereignisse nehmen wir keine Schecks von "
+"außerhalb der EU an."
 
-#: model:boilerplates.category,name:boilerplates.bp_cat_customs
 #. module: boilerplates
+#: model:boilerplates.category,name:boilerplates.bp_cat_customs
 msgid "Customs Authority Notes"
 msgstr "Zoll"
 
-#: model:boilerplates.text,text:boilerplates.bp_txt_tracking1
 #. module: boilerplates
+#: model:boilerplates.text,text:boilerplates.bp_txt_tracking1
 msgid "Urgent Freight. Please keep sender informed about unplanned delays."
-msgstr "Dringend! Bitte den Absender über ungeplante Verzögerungen informieren."
+msgstr ""
+"Dringend! Bitte den Absender über ungeplante Verzögerungen informieren."
 
+#. module: boilerplates
 #: model:ir.actions.act_window,name:boilerplates.open_boilerplate_text_tree
 #: model:ir.module.module,shortdesc:boilerplates.module_meta_information
 #: model:ir.ui.menu,name:boilerplates.menu_boilerplates
 #: model:ir.ui.menu,name:boilerplates.menu_boilerplates_text
-#. module: boilerplates
 msgid "Boilerplates"
 msgstr "Textbausteine"
 
-#: view:boilerplates.category:0
 #. module: boilerplates
+#: view:boilerplates.category:0
 msgid "Boilerplate Categories"
 msgstr "Textbaustein-Kategorien"
 
-#: model:boilerplates.category,name:boilerplates.bp_cat_general
 #. module: boilerplates
+#: model:boilerplates.category,name:boilerplates.bp_cat_general
 msgid "General Notes"
 msgstr "Allgemeine Anmerkungen"
 
-#: view:boilerplates.text:0
 #. module: boilerplates
+#: view:boilerplates.text:0
 msgid "Usability"
 msgstr "Bereitstellung"
 
+#. module: boilerplates
 #: model:ir.actions.act_window,name:boilerplates.open_boilerplate_category_tree
 #: model:ir.ui.menu,name:boilerplates.menu_boilerplates_category
-#. module: boilerplates
 msgid "Categories"
 msgstr "Kategorien"
 
-#: code:addons\boilerplates\wizard\boilerplates_wizard.py:18
 #. module: boilerplates
+#: code:addons\boilerplates\wizard\boilerplates_wizard.py:18
 #, python-format
 msgid "Dummy"
 msgstr "Dummy"
 
-#: model:boilerplates.text,text:boilerplates.bp_txt_acct1
 #. module: boilerplates
-msgid "You may pay in 12 rates at only 2% interest. Contact our Accounting department."
-msgstr "Sie können auch in 12 Raten bei nur 2% Zinsen bezahlen. Bitte kontaktieren Sie unser Rechnungswesen."
+#: model:boilerplates.text,text:boilerplates.bp_txt_acct1
+msgid ""
+"You may pay in 12 rates at only 2% interest. Contact our Accounting "
+"department."
+msgstr ""
+"Sie können auch in 12 Raten bei nur 2% Zinsen bezahlen. Bitte kontaktieren "
+"Sie unser Rechnungswesen."
 
+#. module: boilerplates
 #: field:boilerplates.category,name:0
 #: field:boilerplates.text,name:0
-#. module: boilerplates
 msgid "Name"
 msgstr "Name"
 
-#: model:boilerplates.category,name:boilerplates.bp_cat_accounting
 #. module: boilerplates
+#: model:boilerplates.category,name:boilerplates.bp_cat_accounting
 msgid "Accounting Notes"
 msgstr "Rechnungswesen"
 
-#: model:boilerplates.text,name:boilerplates.bp_txt_tracking1
 #. module: boilerplates
+#: model:boilerplates.text,name:boilerplates.bp_txt_tracking1
 msgid "Urgent - Delay Information"
 msgstr "Dringend - Verzögerungen melden"
 
-#: view:boilerplates.text:0
 #. module: boilerplates
+#: view:boilerplates.text:0
 msgid "Active"
 msgstr "Aktiv"
 
+#. module: boilerplates
 #: view:boilerplates.text:0
 #: field:boilerplates.text,partner_id:0
-#. module: boilerplates
 msgid "Partner"
 msgstr "Partner"
 
-#: view:boilerplates.text:0
 #. module: boilerplates
+#: view:boilerplates.text:0
 msgid "Usability..."
 msgstr "Bereitstellung..."
 
-#: view:boilerplates.text:0
 #. module: boilerplates
+#: view:boilerplates.text:0
 msgid "Constraints"
 msgstr "Einschränkungen"
 
+#. module: boilerplates
 #: code:addons\boilerplates\wizard\boilerplates_wizard.py:67
 #: code:addons\boilerplates\wizard\boilerplates_wizard.py:69
-#. module: boilerplates
 #, python-format
 msgid "Product mismatch"
 msgstr "Abweichung beim Produkt"
 
-#: model:boilerplates.category,name:boilerplates.bp_cat_usage
 #. module: boilerplates
+#: model:boilerplates.category,name:boilerplates.bp_cat_usage
 msgid "Usage Notes"
 msgstr "Benutzerhinweise"
 
-#: model:ir.module.module,description:boilerplates.module_meta_information
 #. module: boilerplates
-msgid "\n"
-"This addon, together with it's modular extensions, provides boilerplates for multiple fields.\n"
+#: model:ir.module.module,description:boilerplates.module_meta_information
+msgid ""
 "\n"
-"Boilerplates can be organized in Categories and set to belong to a specific product or partner.\n"
+"This addon, together with it's modular extensions, provides boilerplates for "
+"multiple fields.\n"
+"\n"
+"Boilerplates can be organized in Categories and set to belong to a specific "
+"product or partner.\n"
 "You can setup texts in Tools / Boilerplates.\n"
 "\n"
-"Modular extensions provide actions on different forms to add these boilerplates directly to existing text fields, thus being used natively, e.g. in reports. \n"
+"Modular extensions provide actions on different forms to add these "
+"boilerplates directly to existing text fields, thus being used natively, "
+"e.g. in reports. \n"
 "    "
-msgstr "\n"
-"Dieses Addon und seine modularen Erweiterungen stellen Textbausteine für verschiedene Felder bereit.\n"
+msgstr ""
 "\n"
-"Die Textbausteine können in Kategorien angeordnet und Produkten oder Partnern zugeordnet werden.\n"
+"Dieses Addon und seine modularen Erweiterungen stellen Textbausteine für "
+"verschiedene Felder bereit.\n"
+"\n"
+"Die Textbausteine können in Kategorien angeordnet und Produkten oder "
+"Partnern zugeordnet werden.\n"
 "Die Einrichtung erfolgt über das Menü Werkzeuge / Textbausteine.\n"
 "\n"
-"Modulare Erweiterungen (boilerplate_*) stellen Aktionen in verschiedenen Formularen bereit, um die Textbausteine direkt existierenden Textfeldern hinzuzufügen. Dadurch stehen sie nativ, zum Beispiel für Ausdrucke, zur Verfügung.\n"
+"Modulare Erweiterungen (boilerplate_*) stellen Aktionen in verschiedenen "
+"Formularen bereit, um die Textbausteine direkt existierenden Textfeldern "
+"hinzuzufügen. Dadurch stehen sie nativ, zum Beispiel für Ausdrucke, zur "
+"Verfügung. \n"
 "    "
 
-#: field:boilerplates.text,text:0
 #. module: boilerplates
+#: field:boilerplates.text,text:0
 msgid "Text"
 msgstr "Text"
 
-#: field:boilerplates.text,valid_from:0
 #. module: boilerplates
+#: field:boilerplates.text,valid_from:0
 msgid "Valid From"
 msgstr "Gültig ab"
 
+#. module: boilerplates
 #: view:boilerplate.wizard:0
 #: model:ir.model,name:boilerplates.model_boilerplate_wizard
-#. module: boilerplates
 msgid "Add Boilerplate"
 msgstr "Textbaustein hinzufügen"
 
-#: view:boilerplates.text:0
 #. module: boilerplates
+#: view:boilerplates.text:0
 msgid "Group by..."
 msgstr "Gruppieren nach..."
 
-#: view:boilerplate.wizard:0
 #. module: boilerplates
+#: view:boilerplate.wizard:0
 msgid "Cancel"
 msgstr "Abbrechen"
 
-#: model:boilerplates.category,name:boilerplates.bp_cat_tracking
 #. module: boilerplates
+#: model:boilerplates.category,name:boilerplates.bp_cat_tracking
 msgid "Dispatch & Tracking Notes"
 msgstr "Versand & Rückverfolgung"
 
-#: field:boilerplate.wizard,remote_id:0
 #. module: boilerplates
+#: field:boilerplate.wizard,remote_id:0
 msgid "Remote model"
 msgstr "Bezug zum Datenbankmodel"
 
-#: view:boilerplates.text:0
 #. module: boilerplates
+#: view:boilerplates.text:0
 msgid "Boilerplate Texts"
 msgstr "Textbausteine"
 
+#. module: boilerplates
 #: code:addons\boilerplates\boilerplates.py:50
 #: sql_constraint:boilerplates.text:0
-#. module: boilerplates
 #, python-format
 msgid "The boilerplate names must be unique!"
 msgstr "Der Name des Textbausteins muss eindeutig sein!"
-
