--- a/boilerplates_stock_move/i18n/de.po
+++ b/boilerplates_stock_move/i18n/de.po
@@ -7,54 +7,54 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 6.0.2\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-05-25 14:20+0000\n"
-"PO-Revision-Date: 2011-05-25 14:20+0000\n"
-"Last-Translator: <>\n"
+"PO-Revision-Date: 2011-08-16 15:26+0000\n"
+"Last-Translator: Bremskerl <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Launchpad-Export-Date: 2012-02-29 05:19+0000\n"
+"X-Generator: Launchpad (build 14874)\n"
 
-#: model:ir.module.module,description:boilerplates_stock_move.module_meta_information
 #. module: boilerplates_stock_move
+#: model:ir.module.module,description:boilerplates_stock_move.module_meta_information
 msgid "Adds Boilerplate actions"
 msgstr "Fügt Textbaustein-Optionen hinzu"
 
+#. module: boilerplates_stock_move
 #: field:boilerplate.wizard.stock.move.notes,boilerplate_id:0
 #: field:boilerplate.wizard.stock.move.prtnotes,boilerplate_id:0
 #: view:stock.move:0
 #: view:stock.picking:0
-#. module: boilerplates_stock_move
 msgid "Boilerplate"
 msgstr "Textbaustein"
 
+#. module: boilerplates_stock_move
 #: code:addons\boilerplates_stock_move\wizard\boilerplates.py:23
 #: code:addons\boilerplates_stock_move\wizard\boilerplates.py:39
-#. module: boilerplates_stock_move
 #, python-format
 msgid "Stock Move"
 msgstr "Lagerbewegung"
 
-#: model:ir.module.module,shortdesc:boilerplates_stock_move.module_meta_information
 #. module: boilerplates_stock_move
+#: model:ir.module.module,shortdesc:boilerplates_stock_move.module_meta_information
 msgid "Boilerplates for Stock Moves"
 msgstr "Textbausteine für Lagerbewegungen"
 
-#: model:ir.actions.act_window,name:boilerplates_stock_move.action_boilerplate_stock_move_prtnotes
 #. module: boilerplates_stock_move
+#: model:ir.actions.act_window,name:boilerplates_stock_move.action_boilerplate_stock_move_prtnotes
 msgid "Add Boilerplate (Prt.)"
 msgstr "Textbaustein (Druck) hinzufügen"
 
+#. module: boilerplates_stock_move
 #: field:boilerplate.wizard.stock.move.notes,remote_id:0
 #: field:boilerplate.wizard.stock.move.prtnotes,remote_id:0
-#. module: boilerplates_stock_move
 msgid "Remote model"
 msgstr "Bezug zum Datenbankmodel"
 
+#. module: boilerplates_stock_move
 #: model:ir.actions.act_window,name:boilerplates_stock_move.action_boilerplate_stock_move_notes
 #: model:ir.model,name:boilerplates_stock_move.model_boilerplate_wizard_stock_move_notes
 #: model:ir.model,name:boilerplates_stock_move.model_boilerplate_wizard_stock_move_prtnotes
-#. module: boilerplates_stock_move
 msgid "Add Boilerplate"
 msgstr "Textbaustein hinzufügen"
-
