--- a/l10n_de_base_res_bank/i18n/de.po
+++ b/l10n_de_base_res_bank/i18n/de.po
@@ -7,20 +7,21 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 6.0.1\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-02-18 16:07+0000\n"
-"PO-Revision-Date: 2011-02-18 16:07+0000\n"
-"Last-Translator: Marco Dieckhoff <dieck@gmx.de>\n"
+"PO-Revision-Date: 2011-08-16 15:29+0000\n"
+"Last-Translator: Marco Dieckhoff <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Launchpad-Export-Date: 2012-02-29 05:19+0000\n"
+"X-Generator: Launchpad (build 14874)\n"
 
-#: help:res.bank,bic_de:0
 #. module: l10n_de_base_res_bank
+#: help:res.bank,bic_de:0
 msgid "German Bank Identifier Code (Bankleitzahl)"
 msgstr "Deutsche Bankleitzahl"
 
-#: field:res.bank,bic_de:0
 #. module: l10n_de_base_res_bank
+#: field:res.bank,bic_de:0
 msgid "German BIC"
 msgstr "Bankleitzahl (BLZ)"
