--- a/product_origin_country/i18n/de.po
+++ b/product_origin_country/i18n/de.po
@@ -7,37 +7,37 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 6.0.1\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-03-31 09:15+0000\n"
-"PO-Revision-Date: 2011-03-31 09:15+0000\n"
-"Last-Translator: <>\n"
+"PO-Revision-Date: 2011-08-16 15:34+0000\n"
+"Last-Translator: Bremskerl <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Launchpad-Export-Date: 2012-02-29 05:19+0000\n"
+"X-Generator: Launchpad (build 14874)\n"
 
-#: model:ir.model,name:product_origin_country.model_product_product
 #. module: product_origin_country
+#: model:ir.model,name:product_origin_country.model_product_product
 msgid "Product"
 msgstr "Produkt"
 
-#: constraint:product.product:0
 #. module: product_origin_country
+#: constraint:product.product:0
 msgid "Error: Invalid ean code"
 msgstr "Fehler: Falscher EAN code"
 
-#: field:product.product,origin_country_id:0
 #. module: product_origin_country
+#: field:product.product,origin_country_id:0
 msgid "Country of Origin"
 msgstr "Herkunftsland"
 
-#: help:product.product,origin_country_id:0
 #. module: product_origin_country
+#: help:product.product,origin_country_id:0
 msgid "Made in ..."
 msgstr "Made in ..."
 
+#. module: product_origin_country
 #: constraint:product.product:0
 #: sql_constraint:product.product:0
-#. module: product_origin_country
 msgid "Reference/Variant has to be unique."
 msgstr "Referenz/Variante muss eindeutig sein."
-
