--- a/product_partner_related_fields/i18n/de.po
+++ b/product_partner_related_fields/i18n/de.po
@@ -7,74 +7,74 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 6.0.1\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-02-15 14:53+0000\n"
-"PO-Revision-Date: 2011-02-15 14:53+0000\n"
-"Last-Translator: <>\n"
+"PO-Revision-Date: 2011-08-16 15:37+0000\n"
+"Last-Translator: Bremskerl <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Launchpad-Export-Date: 2012-02-29 05:19+0000\n"
+"X-Generator: Launchpad (build 14874)\n"
 
-#: view:res.partner:0
 #. module: product_partner_related_fields
+#: view:res.partner:0
 msgid "Product related information"
 msgstr "Produktbezogene Informationen"
 
+#. module: product_partner_related_fields
 #: model:ir.model,name:product_partner_related_fields.model_product_product
 #: view:product.partner.related.fields:0
 #: field:product.partner.related.fields,product_id:0
-#. module: product_partner_related_fields
 msgid "Product"
 msgstr "Produkt"
 
+#. module: product_partner_related_fields
 #: model:ir.actions.act_window,name:product_partner_related_fields.open_product_partner_related_tree
 #: model:ir.ui.menu,name:product_partner_related_fields.menu_product_partner_related_partner
 #: model:ir.ui.menu,name:product_partner_related_fields.menu_product_partner_related_product
 #: view:product.partner.related.fields:0
-#. module: product_partner_related_fields
 msgid "Product-partner related fields"
 msgstr "Felder mit Produkt/Partner-Bezug"
 
-#: field:res.partner,product_related_ids:0
 #. module: product_partner_related_fields
+#: field:res.partner,product_related_ids:0
 msgid "Related product information"
 msgstr "Verknüpfte produktbezogene Informationen"
 
-#: model:ir.model,name:product_partner_related_fields.model_product_partner_related_fields
 #. module: product_partner_related_fields
+#: model:ir.model,name:product_partner_related_fields.model_product_partner_related_fields
 msgid "product.partner.related.fields"
 msgstr "product.partner.related.fields"
 
-#: field:product.product,partner_related_ids:0
 #. module: product_partner_related_fields
+#: field:product.product,partner_related_ids:0
 msgid "Related partner information"
 msgstr "Verknüpfte partnerbezogene Informationen"
 
+#. module: product_partner_related_fields
 #: view:product.partner.related.fields:0
 #: field:product.partner.related.fields,name:0
-#. module: product_partner_related_fields
 msgid "Field name"
 msgstr "Bezeichnung"
 
-#: view:product.partner.related.fields:0
 #. module: product_partner_related_fields
+#: view:product.partner.related.fields:0
 msgid "Group by..."
 msgstr "Gruppierung..."
 
-#: field:product.partner.related.fields,value:0
 #. module: product_partner_related_fields
+#: field:product.partner.related.fields,value:0
 msgid "Field value"
 msgstr "Inhalt/Wert"
 
-#: view:product.product:0
 #. module: product_partner_related_fields
+#: view:product.product:0
 msgid "Partner related information"
 msgstr "Partnerbezogene Informationen"
 
+#. module: product_partner_related_fields
 #: model:ir.model,name:product_partner_related_fields.model_res_partner
 #: view:product.partner.related.fields:0
 #: field:product.partner.related.fields,partner_id:0
-#. module: product_partner_related_fields
 msgid "Partner"
 msgstr "Partner"
-
