--- a/product_wva/i18n/de.po
+++ b/product_wva/i18n/de.po
@@ -6,17 +6,17 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenERP Server 6.0.0-rc2\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
-"POT-Creation-Date: 2011-02-04 10:08:27+0000\n"
-"PO-Revision-Date: 2011-02-04 10:08:27+0000\n"
-"Last-Translator: <>\n"
+"POT-Creation-Date: 2011-02-04 10:08+0000\n"
+"PO-Revision-Date: 2011-08-16 15:56+0000\n"
+"Last-Translator: Bremskerl <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Launchpad-Export-Date: 2012-02-29 05:19+0000\n"
+"X-Generator: Launchpad (build 14874)\n"
 
-#: field:product.product,wva:0
 #. module: product_wva
+#: field:product.product,wva:0
 msgid "WVA number"
 msgstr "WVA-Nummer"
-
