--- a/purchase_order_allresponsible/i18n/de.po
+++ b/purchase_order_allresponsible/i18n/de.po
@@ -7,29 +7,33 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 6.0.2\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-05-05 14:14+0000\n"
-"PO-Revision-Date: 2011-05-05 14:14+0000\n"
-"Last-Translator: <>\n"
+"PO-Revision-Date: 2011-08-16 15:56+0000\n"
+"Last-Translator: Bremskerl <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Launchpad-Export-Date: 2012-02-29 05:19+0000\n"
+"X-Generator: Launchpad (build 14874)\n"
 
-#: model:ir.actions.act_window,help:purchase_order_allresponsible.purchase_form_all_action
 #. module: purchase_order_allresponsible
-msgid "Use this menu to search within your purchase orders\n"
-"				by references, supplier, products, etc. For each purchase order, you\n"
-"				can track the products received, and control the supplier invoices.\n"
-"			"
-msgstr "Verwenden Sie dieses Menü zur Suche in Beschaffungsaufträgen nach "
-"Referenznummer, Lieferant, Produkt oder anderen Suchfiltern. Für jeden"
-"Beschaffungsauftrag können Sie exakt nachvollziehen, welche Produkte Sie"
-"tatsächlich bekommen haben und dadurch auch einen Abgleich mit der"
-"Eingangsrechnung vornehmen."
+#: model:ir.actions.act_window,help:purchase_order_allresponsible.purchase_form_all_action
+msgid ""
+"Use this menu to search within your purchase orders\n"
+"\t\t\t\tby references, supplier, products, etc. For each purchase order, "
+"you\n"
+"\t\t\t\tcan track the products received, and control the supplier invoices.\n"
+"\t\t\t"
+msgstr ""
+"Verwenden Sie dieses Menü zur Suche in Beschaffungsaufträgen nach "
+"Referenznummer, Lieferant, Produkt oder anderen Suchfiltern. Für "
+"jedenBeschaffungsauftrag können Sie exakt nachvollziehen, welche Produkte "
+"Sietatsächlich bekommen haben und dadurch auch einen Abgleich mit "
+"derEingangsrechnung vornehmen.\n"
+"\t\t\t"
 
+#. module: purchase_order_allresponsible
 #: model:ir.actions.act_window,name:purchase_order_allresponsible.purchase_form_all_action
 #: model:ir.ui.menu,name:purchase_order_allresponsible.menu_purchase_form_all_action
-#. module: purchase_order_allresponsible
 msgid "Purchase Orders (All Responsible)"
 msgstr "Beschaffungsaufträge (Alle Verantwortlichen)"
-
