--- a/sale_order_allsalesmen/i18n/de.po
+++ b/sale_order_allsalesmen/i18n/de.po
@@ -7,24 +7,28 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 6.0.2\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-05-23 08:51+0000\n"
-"PO-Revision-Date: 2011-05-23 08:51+0000\n"
-"Last-Translator: <>\n"
+"PO-Revision-Date: 2011-08-16 15:56+0000\n"
+"Last-Translator: Bremskerl <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Launchpad-Export-Date: 2012-02-29 05:19+0000\n"
+"X-Generator: Launchpad (build 14874)\n"
 
 #. module: sale_order_allsalesmen
 #: model:ir.actions.act_window,help:sale_order_allsalesmen.action_order_all_form
-msgid "Sales Orders help you manage quotations and orders\n"
-"				from your customers. OpenERP suggests that you start by creating a\n"
-"				quotation. Once it is confirmed, the quotation will be converted\n"
-"				into a Sales Order. OpenERP can handle several types of products so\n"
-"				that a sales order may trigger tasks, delivery orders, manufacturing\n"
-"				orders, purchases and so on. Based on the configuration of the sales\n"
-"				order, a draft invoice will be generated so that you just have to\n"
-"				confirm it when you want to bill your customer."
+msgid ""
+"Sales Orders help you manage quotations and orders\n"
+"\t\t\t\tfrom your customers. OpenERP suggests that you start by creating a\n"
+"\t\t\t\tquotation. Once it is confirmed, the quotation will be converted\n"
+"\t\t\t\tinto a Sales Order. OpenERP can handle several types of products so\n"
+"\t\t\t\tthat a sales order may trigger tasks, delivery orders, "
+"manufacturing\n"
+"\t\t\t\torders, purchases and so on. Based on the configuration of the "
+"sales\n"
+"\t\t\t\torder, a draft invoice will be generated so that you just have to\n"
+"\t\t\t\tconfirm it when you want to bill your customer."
 msgstr ""
 "Verkaufsaufträge helfen Ihnen bei der Erstellung und Verwaltung von "
 "Angeboten an Ihre Kunden und bei der Auftragserfassung. OpenERP schlägt "
@@ -43,11 +47,12 @@ msgstr ""
 #: model:ir.module.module,description:sale_order_allsalesmen.module_meta_information
 #: model:ir.module.module,shortdesc:sale_order_allsalesmen.module_meta_information
 msgid "Add a menu item to Sales Orders without setting salesman in search"
-msgstr "Fügt ein Menü-Eintrag im Verkauf hinzu um ohne Verkäufer-Vorbelegung die Liste zu öffnen."
+msgstr ""
+"Fügt ein Menü-Eintrag im Verkauf hinzu um ohne Verkäufer-Vorbelegung die "
+"Liste zu öffnen."
 
 #. module: sale_order_allsalesmen
 #: model:ir.actions.act_window,name:sale_order_allsalesmen.action_order_all_form
 #: model:ir.ui.menu,name:sale_order_allsalesmen.menu_sale_order_all
 msgid "Sales Orders (All Salesmen)"
 msgstr "Verkaufsaufträge (Alle Verkäufer)"
-
