--- a/stock_merge_picking_backorder/i18n/de.po
+++ b/stock_merge_picking_backorder/i18n/de.po
@@ -7,60 +7,65 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 6.0.2\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-06-10 12:34+0000\n"
-"PO-Revision-Date: 2011-06-10 12:34+0000\n"
-"Last-Translator: <>\n"
+"PO-Revision-Date: 2011-08-16 15:57+0000\n"
+"Last-Translator: Bremskerl <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Launchpad-Export-Date: 2012-02-29 05:19+0000\n"
+"X-Generator: Launchpad (build 14874)\n"
 
+#. module: stock_merge_picking_backorder
 #: model:ir.module.module,description:stock_merge_picking_backorder.module_meta_information
-#. module: stock_merge_picking_backorder
-msgid "\n"
-"This module allow the merging of picking lists with different backorder pickings and introduces a new relation for tracking them. \n"
+msgid ""
+"\n"
+"This module allow the merging of picking lists with different backorder "
+"pickings and introduces a new relation for tracking them. \n"
 "    "
-msgstr "\n"
-"This module allow the merging of picking lists with different backorder pickings and introduces a new relation for tracking them. \n"
+msgstr ""
+"\n"
+"This module allow the merging of picking lists with different backorder "
+"pickings and introduces a new relation for tracking them. \n"
 "    "
 
-#: field:stock.move,premerge_backorder_id:0
 #. module: stock_merge_picking_backorder
+#: field:stock.move,premerge_backorder_id:0
 msgid "Pre-Merge Back Order"
 msgstr "Lieferrückstand vor Zusammenführung"
 
-#: model:ir.model,name:stock_merge_picking_backorder.model_stock_move
 #. module: stock_merge_picking_backorder
+#: model:ir.model,name:stock_merge_picking_backorder.model_stock_move
 msgid "Stock Move"
 msgstr "Lieferung"
 
-#: view:stock.picking:0
 #. module: stock_merge_picking_backorder
+#: view:stock.picking:0
 msgid "Pre-Merge Backorder of"
 msgstr "Lieferrückstand vor Zusammenführung"
 
-#: constraint:stock.move:0
 #. module: stock_merge_picking_backorder
+#: constraint:stock.move:0
 msgid "You must assign a production lot for this product"
 msgstr "Sie müssen zwingend eine Losnummer für dieses Produkt angeben"
 
+#. module: stock_merge_picking_backorder
 #: constraint:stock.move:0
-#. module: stock_merge_picking_backorder
 msgid "You try to assign a lot which is not from the same product"
-msgstr "Sie versuchen eine Losnummer ohne Bezug zu diesem Produkt zuzuweisen."
+msgstr ""
+"Sie versuchen eine Losnummer ohne Bezug zu diesem Produkt zuzuweisen."
 
-#: model:ir.module.module,shortdesc:stock_merge_picking_backorder.module_meta_information
 #. module: stock_merge_picking_backorder
+#: model:ir.module.module,shortdesc:stock_merge_picking_backorder.module_meta_information
 msgid "Merge Picking: Backorder Handling"
 msgstr "Lieferaufträge zusammenfassen: Behandlung von Lieferrückstand"
 
-#: view:stock.picking:0
 #. module: stock_merge_picking_backorder
+#: view:stock.picking:0
 msgid "Backorder"
 msgstr "Lieferrückstand"
 
-#: model:ir.model,name:stock_merge_picking_backorder.model_stock_picking_merge_wizard
 #. module: stock_merge_picking_backorder
+#: model:ir.model,name:stock_merge_picking_backorder.model_stock_picking_merge_wizard
 msgid "Merge Stock Pickings"
 msgstr "Lieferaufträge zusammenfassen"
-
