--- a/stock_merge_picking_sale/i18n/de.po
+++ b/stock_merge_picking_sale/i18n/de.po
@@ -6,54 +6,60 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenERP Server 6.0.2\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
-"POT-Creation-Date: 2011-05-13 08:49+0000\n"
-"PO-Revision-Date: 2011-05-13 08:49+0000\n"
-"Last-Translator: <>\n"
+"POT-Creation-Date: 2011-08-22 19:13+0000\n"
+"PO-Revision-Date: 2011-10-11 13:30+0000\n"
+"Last-Translator: Marco Dieckhoff <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Launchpad-Export-Date: 2012-02-29 05:19+0000\n"
+"X-Generator: Launchpad (build 14874)\n"
 
-#: sql_constraint:sale.order:0
 #. module: stock_merge_picking_sale
+#: view:stock.move:0
+msgid "Sale Order References"
+msgstr "Referenzen des Verkaufauftrags"
+
+#. module: stock_merge_picking_sale
+#: sql_constraint:sale.order:0
 msgid "Order Reference must be unique !"
 msgstr "Die Referenz muss eindeutig sein!"
 
-#: model:ir.model,name:stock_merge_picking_sale.model_stock_move
 #. module: stock_merge_picking_sale
-msgid "Stock Move"
-msgstr "Lieferung"
-
-#: constraint:stock.move:0
-#. module: stock_merge_picking_sale
-msgid "You try to assign a lot which is not from the same product"
-msgstr "Sie versuchen eine Losnummer ohne Bezug zu diesem Produkt zuzuweisen."
-
 #: view:sale.order:0
 #: field:sale.order,related_picking_ids:0
-#. module: stock_merge_picking_sale
 msgid "Related Pickings"
 msgstr "Verknüpfte Lieferaufträge"
 
-#: constraint:stock.move:0
 #. module: stock_merge_picking_sale
+#: constraint:stock.move:0
+msgid "You try to assign a lot which is not from the same product"
+msgstr ""
+"Sie versuchen eine Losnummer ohne Bezug zu diesem Produkt zuzuweisen."
+
+#. module: stock_merge_picking_sale
+#: model:ir.model,name:stock_merge_picking_sale.model_stock_move
+msgid "Stock Move"
+msgstr "Lieferung"
+
+#. module: stock_merge_picking_sale
+#: constraint:stock.move:0
 msgid "You must assign a production lot for this product"
 msgstr "Sie müssen zwingend eine Losnummer für dieses Produkt angeben"
 
-#: field:stock.move,premerge_sale_id:0
 #. module: stock_merge_picking_sale
+#: field:stock.move,premerge_sale_id:0
 msgid "Pre-Merge Sales Order Reference"
 msgstr "Verknüpfungen zu Verkaufsaufträgen vor der Zusammenführung"
 
+#. module: stock_merge_picking_sale
 #: model:ir.model,name:stock_merge_picking_sale.model_sale_order
 #: view:stock.picking:0
-#. module: stock_merge_picking_sale
 msgid "Sales Order"
 msgstr "Verkaufsauftrag"
 
-#: model:ir.model,name:stock_merge_picking_sale.model_stock_picking_merge_wizard
 #. module: stock_merge_picking_sale
+#: model:ir.model,name:stock_merge_picking_sale.model_stock_picking_merge_wizard
 msgid "Merge Stock Pickings"
 msgstr "Lieferaufträge zusammenfassen"
-
