--- a/stock_move_price_history/i18n/de.po
+++ b/stock_move_price_history/i18n/de.po
@@ -7,50 +7,54 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 6.0.1\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-03-30 11:53+0000\n"
-"PO-Revision-Date: 2011-03-30 11:53+0000\n"
-"Last-Translator: <>\n"
+"PO-Revision-Date: 2011-08-16 16:04+0000\n"
+"Last-Translator: Bremskerl <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Launchpad-Export-Date: 2012-02-29 05:19+0000\n"
+"X-Generator: Launchpad (build 14874)\n"
 
-#: field:stock.move,history_price_dummytrigger:0
 #. module: stock_move_price_history
+#: field:stock.move,history_price_dummytrigger:0
 msgid "Dummy Trigger: Last Update"
 msgstr "Dummy Trigger: Last Update"
 
-#: model:ir.model,name:stock_move_price_history.model_stock_move
 #. module: stock_move_price_history
+#: model:ir.model,name:stock_move_price_history.model_stock_move
 msgid "Stock Move"
 msgstr "Lieferung"
 
+#. module: stock_move_price_history
 #: constraint:stock.move:0
-#. module: stock_move_price_history
 msgid "You try to assign a lot which is not from the same product"
-msgstr "Sie versuchen eine Losnummer ohne Bezug zu diesem Produkt zuzuweisen."
+msgstr ""
+"Sie versuchen eine Losnummer ohne Bezug zu diesem Produkt zuzuweisen."
 
-#: field:stock.move,history_price_unit_currency_id:0
 #. module: stock_move_price_history
+#: field:stock.move,history_price_unit_currency_id:0
 msgid "Historic Unit Price Currency"
 msgstr "Währung des Einzelpreises zum Zeitpunkt der Bewegung"
 
+#. module: stock_move_price_history
 #: field:stock.move,history_price_unit_currency_id_store:0
-#. module: stock_move_price_history
 msgid "Internal storage for Historic Unit Price Currency"
-msgstr "Interner Speicherplatz für die Währung des Einzelpreises zum Zeitpunkt der Bewegung"
+msgstr ""
+"Interner Speicherplatz für die Währung des Einzelpreises zum Zeitpunkt der "
+"Bewegung"
 
-#: constraint:stock.move:0
 #. module: stock_move_price_history
+#: constraint:stock.move:0
 msgid "You must assign a production lot for this product"
 msgstr "Sie müssen zwingend eine Losnummer für dieses Produkt angeben"
 
-#: field:stock.move,history_price_unit:0
 #. module: stock_move_price_history
+#: field:stock.move,history_price_unit:0
 msgid "Historic Unit Price"
 msgstr "Einzelpreis zum Zeitpunkt der Bewegung"
 
-#: view:stock.move:0
 #. module: stock_move_price_history
+#: view:stock.move:0
 msgid "Cost Price (at creation)"
 msgstr "Anschaffungspreis (bei Bewegung)"
