--- a/stock_picking_clientorderref/i18n/de.po
+++ b/stock_picking_clientorderref/i18n/de.po
@@ -7,21 +7,21 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 6.0.2\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-05-06 08:18+0000\n"
-"PO-Revision-Date: 2011-05-06 08:18+0000\n"
-"Last-Translator: <>\n"
+"PO-Revision-Date: 2011-08-16 16:03+0000\n"
+"Last-Translator: Bremskerl <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Launchpad-Export-Date: 2012-02-29 05:19+0000\n"
+"X-Generator: Launchpad (build 14874)\n"
 
-#: view:stock.picking:0
 #. module: stock_picking_clientorderref
+#: view:stock.picking:0
 msgid "SO Cust. Ref."
 msgstr "Ref. Kd. (Auftrag)"
 
-#: field:stock.picking,sale_client_order_ref:0
 #. module: stock_picking_clientorderref
+#: field:stock.picking,sale_client_order_ref:0
 msgid "Sales Order Customer Reference"
 msgstr "Referenz des Kunden (Verkaufsauftrag)"
-
