--- a/survey_change_response_user/i18n/de.po
+++ b/survey_change_response_user/i18n/de.po
@@ -7,37 +7,37 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 6.0.2\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-05-16 14:33+0000\n"
-"PO-Revision-Date: 2011-05-16 14:33+0000\n"
-"Last-Translator: <>\n"
+"PO-Revision-Date: 2011-08-16 16:03+0000\n"
+"Last-Translator: Bremskerl <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Launchpad-Export-Date: 2012-02-29 05:19+0000\n"
+"X-Generator: Launchpad (build 14874)\n"
 
-#: view:survey.uid.changer.wizard:0
 #. module: survey_change_response_user
+#: view:survey.uid.changer.wizard:0
 msgid "Survey User Changer"
 msgstr "Benutzerwechseler für Umfragen"
 
-#: model:ir.model,name:survey_change_response_user.model_survey_uid_changer_wizard
 #. module: survey_change_response_user
+#: model:ir.model,name:survey_change_response_user.model_survey_uid_changer_wizard
 msgid "survey.uid.changer.wizard"
 msgstr "survey.uid.changer.wizard"
 
-#: view:survey.uid.changer.wizard:0
 #. module: survey_change_response_user
+#: view:survey.uid.changer.wizard:0
 msgid "Change User"
 msgstr "Benutzer ändern"
 
+#. module: survey_change_response_user
 #: model:ir.actions.act_window,name:survey_change_response_user.action_survey_user_changer
 #: model:ir.ui.menu,name:survey_change_response_user.menu_survey_user_changer
-#. module: survey_change_response_user
 msgid "Change Survey Response User"
 msgstr "Benutzer eine Umfragenantwort ändern"
 
-#: view:survey.uid.changer.wizard:0
 #. module: survey_change_response_user
+#: view:survey.uid.changer.wizard:0
 msgid "Cancel"
 msgstr "Abbrechen"
-
