--- a/tagging/i18n/de.po
+++ b/tagging/i18n/de.po
@@ -7,62 +7,62 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 6.0.2\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-07-18 13:48+0000\n"
-"PO-Revision-Date: 2011-07-18 13:48+0000\n"
-"Last-Translator: <>\n"
+"PO-Revision-Date: 2011-08-16 16:03+0000\n"
+"Last-Translator: Bremskerl <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Launchpad-Export-Date: 2012-02-29 05:19+0000\n"
+"X-Generator: Launchpad (build 14874)\n"
 
+#. module: tagging
 #: code:addons\tagging\tagging.py:18
 #: sql_constraint:tagging.tags:0
-#. module: tagging
 #, python-format
 msgid "The tag names must be unique!"
 msgstr "Das Schlagwort muss eindeutig sein!"
 
+#. module: tagging
 #: model:ir.actions.act_window,name:tagging.open_tags_tree
 #: model:ir.ui.menu,name:tagging.menu_tagging_tags
 #: view:tagging.tags:0
-#. module: tagging
 msgid "Tags"
 msgstr "Schlagworte"
 
-#: field:tagging.tags,description:0
 #. module: tagging
+#: field:tagging.tags,description:0
 msgid "Short Description"
 msgstr "Kurzbezeichnung"
 
+#. module: tagging
 #: view:tagging.tags:0
 #: field:tagging.tags,notes:0
-#. module: tagging
 msgid "Notes"
 msgstr "Anmerkungen"
 
+#. module: tagging
 #: field:tagging.tags,related_tags_ids:0
 #: view:tagging.tags:0
-#. module: tagging
 msgid "Related Tags"
 msgstr "Verknüpfte Schlagworte"
 
-#: field:tagging.tags,name:0
 #. module: tagging
+#: field:tagging.tags,name:0
 msgid "Tag"
 msgstr "Schlagwort"
 
-#: field:tagging.tags,active:0
 #. module: tagging
+#: field:tagging.tags,active:0
 msgid "Active"
 msgstr "Aktiv"
 
-#: model:ir.model,name:tagging.model_tagging_tags
 #. module: tagging
+#: model:ir.model,name:tagging.model_tagging_tags
 msgid "tagging.tags"
 msgstr "tagging.tags"
 
-#: model:ir.ui.menu,name:tagging.menu_tagging
 #. module: tagging
+#: model:ir.ui.menu,name:tagging.menu_tagging
 msgid "Tagging"
 msgstr "Verschlagwortung"
-
