--- a/tagging_account/i18n/de.po
+++ b/tagging_account/i18n/de.po
@@ -7,38 +7,38 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 6.0.2\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-07-18 13:49+0000\n"
-"PO-Revision-Date: 2011-07-18 13:49+0000\n"
-"Last-Translator: <>\n"
+"PO-Revision-Date: 2011-08-16 16:04+0000\n"
+"Last-Translator: Bremskerl <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Launchpad-Export-Date: 2012-02-29 05:19+0000\n"
+"X-Generator: Launchpad (build 14874)\n"
 
+#. module: tagging_account
 #: view:tagging.tags:0
 #: field:tagging.tags,invoice_ids:0
-#. module: tagging_account
 msgid "Invoices"
 msgstr "Rechnungen"
 
-#: model:ir.model,name:tagging_account.model_tagging_tags
 #. module: tagging_account
+#: model:ir.model,name:tagging_account.model_tagging_tags
 msgid "tagging.tags"
 msgstr "tagging.tags"
 
-#: sql_constraint:tagging.tags:0
 #. module: tagging_account
+#: sql_constraint:tagging.tags:0
 msgid "The tag names must be unique!"
 msgstr "Das Schlagwort muss eindeutig sein!"
 
-#: model:ir.model,name:tagging_account.model_account_invoice
 #. module: tagging_account
+#: model:ir.model,name:tagging_account.model_account_invoice
 msgid "Invoice"
 msgstr "Rechnung"
 
+#. module: tagging_account
 #: view:account.invoice:0
 #: field:account.invoice,tagging_ids:0
-#. module: tagging_account
 msgid "Tags"
 msgstr "Schlagworte"
-
