--- a/tagging_purchase/i18n/de.po
+++ b/tagging_purchase/i18n/de.po
@@ -7,44 +7,44 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 6.0.2\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-07-18 13:50+0000\n"
-"PO-Revision-Date: 2011-07-18 13:50+0000\n"
-"Last-Translator: <>\n"
+"PO-Revision-Date: 2011-08-16 16:04+0000\n"
+"Last-Translator: Bremskerl <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Launchpad-Export-Date: 2012-02-29 05:19+0000\n"
+"X-Generator: Launchpad (build 14874)\n"
 
+#. module: tagging_purchase
 #: sql_constraint:purchase.order:0
 #: sql_constraint:sale.order:0
-#. module: tagging_purchase
 msgid "Order Reference must be unique !"
 msgstr "Die Referenz muss eindeutig sein!"
 
-#: sql_constraint:tagging.tags:0
 #. module: tagging_purchase
+#: sql_constraint:tagging.tags:0
 msgid "The tag names must be unique!"
 msgstr "Das Schlagwort muss eindeutig sein!"
 
+#. module: tagging_purchase
 #: view:purchase.order:0
 #: field:purchase.order,tagging_ids:0
-#. module: tagging_purchase
 msgid "Tags"
 msgstr "Schlagworte"
 
-#: model:ir.model,name:tagging_purchase.model_purchase_order
 #. module: tagging_purchase
+#: model:ir.model,name:tagging_purchase.model_purchase_order
 msgid "Purchase Order"
 msgstr "Beschaffungsauftrag"
 
-#: model:ir.model,name:tagging_purchase.model_tagging_tags
 #. module: tagging_purchase
+#: model:ir.model,name:tagging_purchase.model_tagging_tags
 msgid "tagging.tags"
 msgstr "tagging.tags"
 
+#. module: tagging_purchase
 #: view:tagging.tags:0
 #: field:tagging.tags,purchase_order_ids:0
-#. module: tagging_purchase
 msgid "Purchase Orders"
 msgstr "Beschaffungsaufträge"
-
