--- a/tagging_stock/i18n/de.po
+++ b/tagging_stock/i18n/de.po
@@ -7,38 +7,38 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 6.0.2\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-07-18 13:51+0000\n"
-"PO-Revision-Date: 2011-07-18 13:51+0000\n"
-"Last-Translator: <>\n"
+"PO-Revision-Date: 2011-08-16 16:04+0000\n"
+"Last-Translator: Bremskerl <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Launchpad-Export-Date: 2012-02-29 05:19+0000\n"
+"X-Generator: Launchpad (build 14874)\n"
 
-#: sql_constraint:tagging.tags:0
 #. module: tagging_stock
+#: sql_constraint:tagging.tags:0
 msgid "The tag names must be unique!"
 msgstr "Das Schlagwort muss eindeutig sein!"
 
-#: model:ir.model,name:tagging_stock.model_tagging_tags
 #. module: tagging_stock
+#: model:ir.model,name:tagging_stock.model_tagging_tags
 msgid "tagging.tags"
 msgstr "tagging.tags"
 
+#. module: tagging_stock
 #: view:stock.picking:0
 #: field:stock.picking,tagging_ids:0
-#. module: tagging_stock
 msgid "Tags"
 msgstr "Schlagworte"
 
+#. module: tagging_stock
 #: view:tagging.tags:0
 #: field:tagging.tags,picking_ids:0
-#. module: tagging_stock
 msgid "Pickings"
 msgstr "Lieferaufträge"
 
-#: model:ir.model,name:tagging_stock.model_stock_picking
 #. module: tagging_stock
+#: model:ir.model,name:tagging_stock.model_stock_picking
 msgid "Picking List"
 msgstr "Lieferschein"
-
